--- a/.env.template
+++ b/.env.template
@@ -2,4 +2,5 @@ OPENAI_ORGANIZATION=<organization_key>
 OPENAI_API_KEY=<api_key>
 ELASTIC_API_KEY=<api_key>
 ELASTIC_CLOUD_ID=<cloud_id>
-
+GOOGLE_API_KEY=<google_api_key>
+CSE_ID=<cse_id>
